hydro_lang/tests/compile-fail/non_commutative.stderr
error[E0277]: Because the input stream has ordering `hydro_lang::live_collections::stream::NoOrder`, the closure must demonstrate commutativity with a `commutative = ...` annotation.
 --> tests/compile-fail/non_commutative.rs:9:10
  |
9 |         .fold(q!(|| 0), q!(|acc, x| *acc += x));
  |          ^^^^ required for this call
  |
  = note: To intentionally process the stream by observing a non-deterministic (shuffled) order of elements, use `.assume_ordering`. This introduces non-determinism so avoid unless necessary.
help: the trait `ValidCommutativityFor<hydro_lang::live_collections::stream::NoOrder>` is not implemented for `NotProved`
      but trait `ValidCommutativityFor<hydro_lang::live_collections::stream::TotalOrder>` is implemented for it
 --> src/properties/mod.rs
  |
  | impl ValidCommutativityFor<TotalOrder> for NotProved {}
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  = help: for that trait implementation, expected `hydro_lang::live_collections::stream::TotalOrder`, found `hydro_lang::live_collections::stream::NoOrder`
note: required by a bound in `hydro_lang::prelude::Stream::<T, L, B, O, R>::fold`
 --> src/live_collections/stream/mod.rs
  |
  |     pub fn fold<A, I, F, C, Idemp>(
  |            ---- required by a bound in this associated function
...
  |         C: ValidCommutativityFor<O>,
  |            ^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `Stream::<T, L, B, O, R>::fold`
